--- a/package.json
+++ b/package.json
@@ -22,5 +22,10 @@
   "engines": {
     "yarn": ">=1.22.10",
     "node": ">=15.5.0"
+  },
+  "devDependencies": {
+    "eslint": "7.2.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.22.1"
   }
 }
